--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,9 @@ text-decoration: none;
   z-index:3;
   padding-left:15px;
   padding-right:15px;
-  min-width: 1200px;
+  max-width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
  }
 .header{
   background-image:url(../images/banner-bg.jpg);
@@ -33,8 +35,7 @@ text-decoration: none;
   background-color:#000000;
   position:relative;
   z-index:1;
-  padding-top:41px;
-  padding-bottom:132px;
+  padding: 41px 230px 132px;
 }
 .header::after{
   content:"";
@@ -48,11 +49,11 @@ text-decoration: none;
   z-index:2;
 }
 .menu{
-  min-width:1200px;
+  max-width:1200px;
   margin:auto;
   display:flex;
   justify-content:space-between;
- }
+}
 .menu-link{
   margin-left: auto;
   font-size: 13px;
@@ -204,7 +205,7 @@ text-decoration: none;
   margin-right:auto;
   display:flex;
   justify-content:space-between;
-  padding:57px 15px 0px 15px;
+  padding:0px 15px;
   }
  .post-content{
   max-width:780px;
@@ -235,7 +236,6 @@ text-decoration: none;
   color: #b59f5b;
   font-weight: 700;
   font-family: OpenSans-Bold;
-  src: url(../fonts/OpenSans-Bold.woff);
   text-transform:uppercase;
   }
 .titleh{
@@ -459,13 +459,16 @@ sup{
   justify-content:space-between;
   padding:57px 15px 0px 15px;
   margin-bottom: 60px;
-  flex-grow: 1; 
-}
-
-  .our-made{
+  flex-grow: 1;
+   }
+ .our-made{
   width: calc((100% - 224px) / 3);
   margin-left: 23px;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+   }
+  
   .title-made{
   font-size: 20px;
   line-height: 24px;
@@ -543,7 +546,7 @@ sup{
   background-color:#f4f7f6;
   padding:30px 0;
   margin-bottom:65px;
-}
+  }
 .socials{
   display:flex; 
   justify-content:center;
@@ -611,7 +614,110 @@ sup{
   src: url(../fonts/OpenSans-Bold.woff);
   text-align:center;
    }
-.popup-container{
+   @media(min-width: 641px) , (max-width: 1200px){
+   
+ .container{
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  }
+  .logo-link{
+    margin-right: auto;
+  }
+  .header-menu{
+    display: none;
+  }
+ .trends{
+  display:flex ;
+  flex-wrap: wrap;
+  margin-top:29px;
+  margin-bottom: 50px;
+  width:100%;
+  min-height: 316px;
+  }
+ .trend{
+ width:49.5%;
+  }
+  .content{
+  min-width: 700px;
+  display: flex;
+  flex-grow: 1;
+  } 
+  .post-content{
+  width:calc(100% - 270px);
+  box-sizing:border-box;
+  flex-grow: 1;
+  }
+.post{
+  flex-wrap: wrap;
+  max-width:100%;
+  }
+.pic{
+  width: 100%;
+ }
+ .text{
+  width:100%;
+ }
+ .menu-text-item{
+  list-style-type:none;
+  display:inline-block;
+  margin-right:20px;
+ }
+.menu-text-link{
+  font-size: 14px;
+  line-height: 40px;
+  color: #b59f5b;
+  font-weight: 700;
+  font-family: OpenSans-Bold;
+  text-transform:uppercase;
+  }
+  .new-content{
+  width:270px;
+  margin-left: 35px;
+  }
+ .mades{
+  min-width: 700px;
+  min-height: 434px;
+  margin-right:auto;
+  margin-left: auto;
+  display:flex;
+  flex-wrap: wrap;
+  padding:57px 15px 0px 15px;
+  margin-bottom: 60px;
+  flex-grow: 1;
+   }
+ .our-made{
+  width: 46%;
+  margin-left: 23px;
+  display: flex;
+  margin-bottom: 35px;
+  }
+  .made-box{
+    background-size: cover;
+    width: 100%;
+  }
+   .made-body{
+  border: 2px solid #b59f5b;
+  margin-top: -6%;
+  margin-right:-5%;
+  margin-left:-5%;
+  position:relative;
+  z-index:1;
+  padding: 50px 20px 26px;
+  }
+  .footer{
+    min-width: 700px;
+  }
+
+  .footer-address{
+  min-width: 100%;
+  margin-bottom:20px;
+  background-color:#f4f7f6;
+  padding:30px 0;
+  margin-bottom:65px;
+  }
+
+/*.popup-container{
   position: fixed;
   z-index: 10;
   top: 0;
